@@ -4,6 +4,7 @@
     * Add the function of backup Gconfig Setting
     * Add a Daily Tip
     * fix the bug 'no apt' in Fedora
+    * Add device viewer :Hardware Lister
 
 2010-04-26 Homer Xing <homer.xing@gmail.com>
 
